deploy/apps/homelab/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: snippetquiz
spec:
  stripPrefix:
    prefixes:
      - /api
