deploy/apps/homelab/frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: snippetquiz
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sq.rafaescala.com`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
  tls:
    secretName: frontend-certificates-secret
